<resources>
    <string name="app_name">MedTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_hint_email">E-mail</string>
    <string name="str_hint_name">Full Name</string>
    <string name="str_hint_dob">Date of Birth</string>
    <string name="str_hint_password">Password</string>
    <string name="str_hint_confirm_password">Confirm Password</string>
    <string name="str_hint_gender">Gender</string>
    <string name="str_btn_register">Register</string>
    <string name="str_hint_doctor_id">Registration ID(BMDC)</string>
    <string name="str_avatar_doctor">Doctor\'s Avatar</string>
    <string name="str_hint_medicine_name">Medicine Name</string>
    <string name="str_hint_medicine_time">Time</string>
    <string name="str_hint_medicine_duration">Days</string>
    <string name="str_landing_option_text">Login/Register As</string>
    <string name="str_btn_patient">Patient</string>
    <string name="str_btn_doctor">Doctor</string>
    <string name="str_btn_log_in">Log In</string>
    <string name="str_register_text">Don\'t have an account register now</string>
    <string name="str_desc_medicine_alarm">Add alarm for medicine</string>
    <string name="str_alarm_default_text">There is no alarm for any medicine</string>
    <string name="str_patient_default_text">There is no active prescription</string>
    <string name="str_hint_speciality">Speciality</string>
    <string name="str_hint_doctor_type">Doctor Type</string>
    <string name="str_hint_nid">NID/Passport Number</string>
    <string name="str_hint_title">Title</string>
    <string name="str_hint_mobile_number">Mobile Number</string>
    <string name="str_hint_specialist">Specialist</string>
</resources>