<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.doctor.DoctorRegisterPage">

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_color"
        android:text="@string/str_btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_doctor_register"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_email_layout"
                style="@style/DefaultInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_email"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_doctor_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_name_layout"
                style="@style/DefaultInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_name"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_doctor_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_id_layout"
                style="@style/DefaultInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_doctor_id"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/input_doctor_type_layout"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_doctor_id"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="16dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_type_layout"
                style="@style/DefaultExposedMenuLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/str_hint_doctor_type"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintBottom_toBottomOf="@+id/input_doctor_id_layout"
                app:layout_constraintEnd_toStartOf="@+id/input_doctor_id_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_doctor_id_layout">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/input_doctor_type"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_password_layout"
                style="@style/DefaultInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_password"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_id_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_doctor_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_nid_layout"
                style="@style/DefaultInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_nid"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_doctor_nid"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="number"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_mobile_number_layout"
                style="@style/DefaultInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_mobile_number"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_title_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_doctor_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="number"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_gender_layout"
                style="@style/DefaultExposedMenuLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_gender"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_mobile_number_layout">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/input_doctor_gender"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_specialist_layout"
                style="@style/DefaultExposedMenuLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_specialist"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_nid_layout">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/input_doctor_specialist"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_title_layout"
                style="@style/DefaultExposedMenuLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/str_hint_title"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_specialist_layout">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/input_doctor_title"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_doctor_about_layout"
                style="@style/DefaultInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="40dp"
                android:hint="About You"
                android:textColorHint="?attr/colorOnPrimary"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_doctor_gender_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_doctor_about"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:ellipsize="start"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>